--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: linear-gradient(135deg, #FFF5E1, #edb183); /* Degradado de colores */
+  z-index: -1;
 }
 
 
@@ -31,7 +33,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #E27D60;
   cursor: pointer;
   transition: border-color 0.25s;
 }
