--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background: linear-gradient(135deg, #FFF5E1, #edb183); /* Degradado de colores */
+  background: linear-gradient(135deg, #FFF5E1, #edb183); 
   z-index: -1;
 }
 
