--- a/src/components/MainComponent/MainComponent.css
+++ b/src/components/MainComponent/MainComponent.css
@@ -1,6 +1,8 @@
 .main-component{
+    width: 100vw;
+    max-height: 100vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: center ;
     gap: 10px;
 
 }
