--- a/src/components/IndexComponent/IndexComponent.css
+++ b/src/components/IndexComponent/IndexComponent.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
 }
-.index-component .index-container{
+.index-component .info-container{
     display: flex;
     width: 100%;
     height: 100%;
