--- a/src/components/IndexComponent/IndexComponent.css
+++ b/src/components/IndexComponent/IndexComponent.css
@@ -1,6 +1,7 @@
 .index-component{
     display: flex;
     flex-direction: column;
+    margin-top: 15%;
 }
 .index-component .info-container{
     display: flex;
