--- a/src/components/InfoComponent/InfoComponent.css
+++ b/src/components/InfoComponent/InfoComponent.css
@@ -35,3 +35,9 @@
       transform: rotate(360deg);
     }
   } 
+
+  .info-component{
+    display: grid;
+    grid-template-columns:repeat(1, 1fr) ;
+    flex-direction: row;
+  }
