--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,8 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background: linear-gradient(135deg, #FFF5E1, #edb183); 
+   background-attachment: fixed; 
+  background-size: cover;
   z-index: -1;
 }
 
