--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
-  background: linear-gradient(135deg, #FFF5E1, #edb183); 
+  background: linear-gradient(135deg, #3b3b3a, #070707); 
    background-attachment: fixed; 
   background-size: cover;
   z-index: -1;
@@ -45,7 +45,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #E27D60;
+  background-color: #05e20c;
   cursor: pointer;
   transition: border-color 0.25s;
 }
