--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -7,11 +7,11 @@
     margin-bottom: 2rem;
     background-color: #fff;
     padding: 1.5rem;
-    color: brown;
+    color: rgb(58, 50, 50);
 }
 
 .card-component span {
-    color: #b77f07;
+    color: #0e0f0e;
 }
 
 .card-component .img-and-name-container {
@@ -23,7 +23,7 @@
         align-self: center;
         font-size: 1.8rem;
         font-weight: bold;
-        color: brown;
+        color: rgb(21, 21, 21);
     }
     img {
         width: 100%;
@@ -52,14 +52,14 @@
 .card-component .userPoster-info-container .userPoster {
     font-weight: bold;
     font-size: 1.6rem;
-    color: brown;
+    color: rgb(17, 16, 16);
 }
 
 .card-component .container-description {
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    background-color: #f9f9f9;
+    background-color: #c5c0c0;
     border-radius: 8px;
     margin-bottom: 1rem;
 }
@@ -154,7 +154,7 @@
             svg {
                 width: 1.5rem;
                 height: auto;
-                fill: #b77f07;
+                fill: #101010;
                 cursor: pointer;
             }
         }
@@ -211,12 +211,12 @@
 
 .show-more-btn {
     margin-top: 1rem;
-    color: #b77f07;
+    color: #1e1e1e;
     cursor: pointer;
     font-size: 1rem;
     transition: color 0.3s ease;
 }
 
 .show-more-btn:hover {
-    color: #995c04;
+    color: #0b0b0b;
 }
