--- a/src/components/LoginComponent/LoginComponent.css
+++ b/src/components/LoginComponent/LoginComponent.css
@@ -4,10 +4,10 @@
     align-content: space-between;
     border-radius: 15px;
     padding: 4rem;
-    background: #F4E1D2; /* Beige */
-    box-shadow: inset 0px 0px 20px rgba(105, 65, 52, 0.5); /* Color cálido con opacidad */
+    background: #807f7e; /* Beige */
+    box-shadow: inset 0px 0px 20px rgba(25, 236, 2, 0.5); /* Color cálido con opacidad */
     h1{
-        color: #4E342E;
+        color: #023806;
     }
 }
 
