--- a/src/components/MainComponent/MainComponent.css
+++ b/src/components/MainComponent/MainComponent.css
@@ -8,7 +8,7 @@
 }
 
 .login, .signup{
-    background-color:#8d5b4f;
+    background-color:#05e20c;
     cursor: pointer;
     width: 5vw;
     height: 4vh;
@@ -17,7 +17,9 @@
     justify-content: center;
     border-radius: 6px;
     transition: 0.2s ease-in-out;
+    color: black;
+    font-weight: bold;
     &:hover{
-        background-color: #4E342E;
+        background-color: #035510;
     }
 }
