--- a/src/components/ProfileInfoComponent/ProfileInfoComponent.css
+++ b/src/components/ProfileInfoComponent/ProfileInfoComponent.css
@@ -40,14 +40,14 @@
 .profile-user-card .name-info .name-last-name span {
     font-size: 1.75rem;
     font-weight: bold;
-    color: brown;
+    color: rgb(6, 6, 6);
 }
 
 .profile-user-card .name-info .name-last-name svg {
     width: 1.5rem;
     height: auto;
     margin-left: 1rem;
-    fill: brown;
+    fill:#05e20c;
 }
 
 .profile-user-card .userName {
@@ -69,13 +69,13 @@
     flex-direction: column;
     align-items: center;
     font-size: 1.2rem;
-    color: brown;
+    color: rgb(11, 11, 11);
 }
 
 .followers .info, .following .info {
     font-size: 1.75rem;
     font-weight: bold;
-    color: brown;
+    color: rgb(12, 12, 12);
 }
 
 .profile-user-card .myLists-container {
@@ -84,7 +84,7 @@
     width: 30%;
     justify-content: space-between;
     font-size: 1.3rem;
-    color: brown;
+    color: rgb(14, 13, 13);
     margin-bottom: 1rem;
 }
 .profile-user-card .list-to-show{
@@ -157,6 +157,6 @@
 .post-container span {
     font-size: 1.2rem;
     font-weight: 500;
-    color: brown;
+    color: rgb(17, 15, 15);
     text-align: center;
 }
