--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -53,6 +53,9 @@
     font-weight: bold;
     font-size: 1.6rem;
     color: rgb(17, 16, 16);
+    &:hover{
+        cursor: pointer;
+    }
 }
 
 .card-component .container-description {
