--- a/src/components/CardComponent/CardComponent.css
+++ b/src/components/CardComponent/CardComponent.css
@@ -9,12 +9,11 @@
     padding: 1.5rem;
     color: rgb(58, 50, 50);
 }
-
 .card-component span {
     color: #0e0f0e;
 }
 
-.card-component .img-and-name-container {
+.card-component  .img-and-name-container {
     display: flex;
     flex-direction: column;
     width: 50rem;
@@ -33,8 +32,31 @@
         margin-top: 1rem;
     }
 }
-
-.card-component .userPoster-info-container {
+.card-component .container-wt-opt-img-info {
+    display: flex;
+    justify-content: space-between;
+}
+.card-component .container-wt-opt-img-info .options{
+    width: 1.5vw;
+    height: auto;
+}
+.card-component .container-wt-opt-img-info .userPoster-info-container .options{
+    width: 1vw;
+    height: auto;
+    align-self: center;
+    cursor: pointer;
+}
+.remove-post{
+    position: absolute;
+    top: 210.95rem;
+    right: 12.5rem;
+    width: fit-content;
+    padding: 0.5rem;
+    border-radius: 10px;
+    background-color: white;
+    z-index: 0;
+}
+.card-component .container-wt-opt-img-info .userPoster-info-container {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -42,13 +64,13 @@
     width: 50%;
     justify-content: space-between;
 }
-.card-component .userPoster-.userPoster-info-container .follow{
+.card-component .userPoster-info-container.follow{
     color: rgb(0, 123, 255); /* Color para el estado "No siguiendo" */
     background-color: #fff;
     border: 1px solid rgb(0, 123, 255);
 }
 
-.card-component .userPoster-.userPoster-info-container .following {
+.card-component .userPoster-.userPoster-info-container.following {
     color: rgb(122, 117, 117); /* Color para el estado "Siguiendo" */
     background-color: #f0f0f0;
     border: 1px solid rgb(122, 117, 117);
