managing requests of private user profile

--- a/src/components/ProfileInfoComponent/ProfileInfoComponent.css
+++ b/src/components/ProfileInfoComponent/ProfileInfoComponent.css
@@ -1,5 +1,6 @@
 
 .profile-user-card {
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 75rem;
@@ -142,6 +143,7 @@
     align-self: center;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     height: 15rem;
     span{
         font-size: 1.5rem;
@@ -189,4 +191,16 @@
     width: 2rem;
     height: 2rem;
     cursor: pointer;
+}
+.container-btn-follow{
+    position: absolute;
+    right: 0rem;
+    top: 0rem;
+    width: fit-content;
+    .btn-follow{
+        width: 6vw;
+        height: 6vh;
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
 }
