--- a/src/components/HeaderComponent/HeaderComponent.css
+++ b/src/components/HeaderComponent/HeaderComponent.css
@@ -8,7 +8,7 @@
     position: fixed;
     background-color: white;
     box-shadow: 1px 1px 23px black;
-    z-index: 10;
+    z-index: 11;
 }
 
 .header img{
@@ -85,24 +85,11 @@
         color: red;
     }
 }
-/* .header .container-opt .profile-opt{
-    position: absolute;
-    color: black;
-    background-color: white;
-    top: 15vh;
-    right: 0.75vw ;
-    margin: 0;
-    ul{
-        list-style-type: none;
-        li{
 
-        }
-    }
-} */
 .profile-opt {
     position: absolute; 
     top: 11.4vh; 
-    right: 1.25vw; 
+    right: -13.75vw; 
     background-color: white; 
     border: 1px solid #ccc; 
     border-radius: 8px; 
@@ -110,18 +97,15 @@
     padding: 10px; 
     z-index: 1000; 
     width: 200px; 
-    transition: opacity 0.3s ease, transform 0.3s ease; 
-    opacity: 0; 
-    transform: translateY(-10px);
+    transition: right 0.5s ease; 
 }
 
 .profile-opt.show {
-    opacity: 1; 
-    transform: translateY(0); 
+    right: 1.25vw; 
 }
 
 .profile-opt.hidden {
-    display: none; 
+    right: -13.75vw; 
 }
 
 .profile-opt ul {
@@ -141,3 +125,29 @@
     background-color: #f0f0f0; 
 }
 
+.notifications-container{
+    position: absolute;
+    background: white;
+    top: 11.4vh; 
+    right: -13.75vw; 
+    border: 1px solid #ccc; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    padding: 0.5rem;
+    transition: right 0.5s ease;
+    z-index: 9;
+    span{
+        color: gray;
+    }
+}
+
+.notifications-container.show{
+    opacity: 1;
+    right: 6.25vw; 
+    z-index: 9;
+
+}
+
+.notifications-container.hidden{
+    right: -13.75vw; 
+}
