--- a/src/components/ProfileInfoComponent/ProfileInfoComponent.css
+++ b/src/components/ProfileInfoComponent/ProfileInfoComponent.css
@@ -52,7 +52,17 @@
     margin-left: 1rem;
     fill:#05e20c;
 }
-
+.profile-user-card .container-description{
+    display: flex;
+    width: 100%;
+    background-color: rgb(222, 216, 216);
+    box-shadow: inset 0px 0px 10px 1px gray;
+    border-radius: 4px;
+   span{
+        font-size: 1.5rem;
+        margin: 1rem;
+    }
+}
 .profile-user-card .userName {
     font-size: 1.5rem;
     color: #666;
