--- a/src/components/ProfileInfoComponent/ProfileInfoComponent.css
+++ b/src/components/ProfileInfoComponent/ProfileInfoComponent.css
@@ -77,7 +77,7 @@
     margin: 0 2rem;
 }
 
-.follows-container .followers, .follows-container .following {
+.follows-container .cont-followers, .follows-container .cont-following {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -85,7 +85,7 @@
     color: rgb(11, 11, 11);
 }
 
-.followers .info, .following .info {
+.cont-followers .info, .cont-following .info {
     font-size: 1.75rem;
     font-weight: bold;
     color: rgb(12, 12, 12);
